kuber-homeworks/3.3/src/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-frontend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool-frontend
  template:
    metadata:
      labels:
        app: multitool-frontend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
