kuber-homeworks/3.3/src/backend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: app
spec:
  selector:
    app: multitool-backend
  ports:
    - name: multitool
      port: 80
      targetPort: 80
