kuber-homeworks/3.3/src/cache_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
  namespace: app
spec:
  selector:
    app: multitool-cache
  ports:
    - name: multitool
      port: 80
      targetPort: 80
