kuber-homeworks/3.3/src/frontend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: app
spec:
  selector:
    app: multitool-frontend
  ports:
    - name: multitool
      port: 80
      targetPort: 80
